# phoenix

./: CMakeLists.txt  README.md
include/: D2Q9.H  (+131 more)
src/: CMakeLists.txt
src/EOS/: CMakeLists.txt  EOS.C  EOS.H  EOSCreator.C  EOSCreator.H  vanDerWaals.C  vanDerWaals.H
src/IO/: CMakeLists.txt  dictionary.C  dictionary.H
src/algebra/: CMakeLists.txt  algebra.H  scalarMatrix.C  scalarMatrix.H  scalarVector.C  scalarVector.H  sparseScalarMatrix.C  sparseScalarMatrix.H
src/applications/: CMakeLists.txt
src/applications/fields/: CMakeLists.txt
src/applications/fields/setInitialFields/: fieldConstructor.H  setInitialFieldss.C
src/applications/mesh/: CMakeLists.txt
src/applications/mesh/cartesianMesh/: Build_triangle.H  CGAL_datatypes.H  CMakeLists.txt  STLToNefPolyhedron.C  STLToNefPolyhedron.H  STLToPolyhedron.C  STLToPolyhedron.H  cartesianMesh.C  cellsInsidePolyhedron.C  cellsInsidePolyhedron.H  findClosestBoundary.C  findClosestBoundary.H  periodicBnds.H  periodicBoundaryCorrection.C  periodicBoundaryCorrection.H  symmetryPlanesCorrection.C  symmetryPlanesCorrection.H  updatePointsAndCells.C  updatePointsAndCells.H  writeBasicMesh.C  writeBasicMesh.H
src/applications/mesh/latticeBox2D/: CMakeLists.txt  basicMesh.H  genericBoundary.C  genericBoundary.H  latticeBox2D.C  periodicX.C  periodicX.H  periodicXY.C  periodicXY.H  periodicY.C  periodicY.H  writeBasicMesh.H
src/applications/mesh/latticeBox3D/: CMakeLists.txt  genericBoundary3D.C  genericBoundary3D.H  latticeBox3D.C  periodicXY3D.C  periodicXY3D.H  periodicXYZ3D.C  periodicXYZ3D.H  periodicZ3D.C  periodicZ3D.H  writeBasicMesh.C
src/applications/mesh/latticeMeshPartitions/: CMakeLists.txt  computeVirtualNodes.C  computeVirtualNodes.H  kmetisDecomp.C  kmetisDecomp.H  latticeMeshPartitions.C  localIndexing.C  localIndexing.H  mlevelKmetisDecomp.C  mlevelKmetisDecomp.H  mpmetisDecomp.C  mpmetisDecomp.H  readBasicMesh.C  readBasicMesh.H  readVTKInfo.C  readVTKInfo.H  standardDecomp.C  standardDecomp.H  updateCaseFile.C  updateCaseFile.H  vtkInfo.H  writeLatticeMesh.C  writeMeshToEnsight.C  writeMeshToEnsight.H
src/applications/mesh/meshInclude/: basicMesh.H  dataTypes.h  latticeMesh_C.H  mpiInfo_C.H
src/applications/mesh/salomeToPhoenix/: CMakeLists.txt  readBasicMesh.C  salomeToPhoenix.C  writeLatticeMesh.H
src/applications/solvers/: CMakeLists.txt
src/applications/utilities/: CMakeLists.txt
src/boundary/: CMakeLists.txt
src/boundary/energy/: energyBndCond.C  energyBndCond.H  energyBndCreator.C  energyBndCreator.H  energyFixedT.C  energyFixedT.H  energyPeriodic.C  energyPeriodic.H
src/boundary/pseudopotential/: ppBndCond.C  ppBndCond.H  ppBndCreator.C  ppBndCreator.H  ppFixedU.C  ppFixedU.H  ppPeriodic.C  ppPeriodic.H
src/fdEquations/: CMakeLists.txt  TEquation.C  TEquation.H  simplifiedTEq.C  simplifiedTEq.H
src/forces/: CMakeLists.txt  CarnahanStarling.C  CarnahanStarling.H  EOS.C  EOS.H  EOSCreator.C  EOSCreator.H  adsorptionForce.C  adsorptionForce.H  avgDensityBForce.C  bForces.C  bForces.H  buoyantForce.H  externalForce.H  fixedDensityBForce.C  fixedDensityBForce.H  intForce.C  intForce.H  interactionForce.C  interactionForce.H  pseudoPotForce.C  pseudoPotForce.H  singleRangeIntForce.C  singleRangeIntForce.H  singleRangeMixedIntForce.C  vanDerWaals.C  vanDerWaals.H
src/forces/EOS/: EOS.H  EOSCreator.C  EOSCreator.H  PengRobinson.C  PengRobinson.H  piecewiseLinear.C  piecewiseLinear.H
src/forces/adhesive/: adhesiveForce.C  adhesiveForce.H  adsForceCreator.C  adsForceCreator.H  liAdhesive.C  liAdhesive.H  noAds.C  noAds.H  phiBasedMod.C  phiBasedMod.H  rndSpots.C  rndSpots.H  simpleAdhesive.C  simpleAdhesive.H
src/forces/buoyant/: avgDensityBForce.C  avgDensityBForce.H  bForces.C  bForces.H  buoyantForce.C  buoyantForce.H  fixedDensityBForce.H
src/forces/interaction/: intForce.C  intForce.H  interactionForce.C  interactionForce.H  singleRangeIntForce.C  singleRangeIntForce.H  singleRangeMixedIntForce.C  singleRangeMixedIntForce.H  singleRangeMixedWithContact.C  singleRangeMixedWithContact.H  singleRangeWithContact.C  singleRangeWithContact.H
src/forces/pseudopotential/: pseudoPotForce.C  pseudoPotForce.H
src/forces/surfaceTension/: liSurfaceTension.C  liSurfaceTension.H  liSurfaceTensionContact.C  liSurfaceTensionContact.H  noSurfaceTension.C  noSurfaceTension.H  stCreator.C  stCreator.H  surfaceTension.C  surfaceTension.H
src/geometry/: CMakeLists.txt  basicShape.C  basicShape.H  sphere.C  sphere.H
src/heatSources/: CMakeLists.txt  heatSource.C  heatSource.H  hsCreator.C  hsCreator.H  liHS.C  liHS.H  markusHaziHS.C  markusHaziHS.H  noHS.C  noHS.H
src/latticeFields/: CMakeLists.txt  latticeField.C  latticeField.H  pdfField.C  pdfField.H  scalarField.C  scalarField.H  vectorField.C  vectorField.H
src/latticeModel/: CMakeLists.txt  D2Q9.C  D2Q9.H  D3Q15.C  D3Q15.H  latticeModel.C  latticeModel.H  latticeModelCreator.C  latticeModelCreator.H
src/lbEquations/: CMakeLists.txt  LiMRTEq.C  LiMRTEq.H  lbEquation.C  lbEquation.H  pseudoPotEquation.C  pseudoPotEquation.H
src/lbEquations/energy/: EEquation.C  EEquation.H  GongSRTEq.C  GongSRTEq.H  LiEnergyMRTEq.C  LiEnergyMRTEq.H  energyEqHandler.C  energyEqHandler.H  energyEquation.C  energyEquation.H  myMRTEq.C  myMRTEq.H
src/lbEquations/pseudopotential/: LiMRTEq.C  LiMRTEq.H  PPEquation.C  PPEquation.H  XuMRTEq.C  XuMRTEq.H  pseudoPotEqHandler.C  pseudoPotEqHandler.H  pseudoPotEquation.C  pseudoPotEquation.H
src/mesh/: CMakeLists.txt  basicMesh.C  basicMesh.H  computeNeighboursFromCells.C  computeNeighboursFromCells.H  createLatticeCells.C  createLatticeCells.H  createLatticeGrid.C  createLatticeGrid.H  latticeMesh.C  latticeMesh.H  localIndexer.C  localIndexer.H  mpiInfo.C  mpiInfo.H
src/relaxModel/: CMakeLists.txt  relaxModel.C  relaxModel.H  relaxModelCreator.C  relaxModelCreator.H  rhoPieceWise.C  rhoPieceWise.H  rhoPieceWiseLinear.C  rhoPieceWiseLinear.H  uniformTau.C  uniformTau.H
src/simulation/: CMakeLists.txt  timeOptions.C  timeOptions.H
src/test/: CMakeLists.txt  test1.C  test2.C  test3.c  test4.C  test5.C
(+207 files in other folders)
