# lattice Models library

add_subdirectory (latticeModel)


# basic algebra library

add_subdirectory (algebra)


# basic input/output library

add_subdirectory (IO)


# mesh library

add_subdirectory (mesh)


# simulation properties library

add_subdirectory (simulation)




# Specific applications

add_subdirectory (applications)


# unit tests

add_subdirectory (test)
