# lattice Models library

add_subdirectory (latticeModel)


# basic algebra library

add_subdirectory (algebra)


# basic geometry library

add_subdirectory (geometry)


# basic input/output library

add_subdirectory (IO)


# mesh library

add_subdirectory (mesh)


# simulation properties library

add_subdirectory (simulation)


# lattice fields

add_subdirectory (latticeFields)


# lattice-boltzmann equations

add_subdirectory (lbEquations)


# Finite - difference equations

add_subdirectory (fdEquations)


# Forces

add_subdirectory (forces)


# Heat sources

add_subdirectory (heatSources)



# Specific applications

add_subdirectory (applications)


# unit tests

add_subdirectory (test)
