# Pseudopotential solver

add_subdirectory (multiPhasePP)


# Pseudopotential solver with heat transfer

add_subdirectory (multiPhasePPHT)


# Pseudopotential solver with heat transfer
# Finite-difference scheme for energy equation

add_subdirectory (multiPhasePPHT_FD)


# Pseudopotential solver with heat transfer
# Predictor-corrector scheme for energy equation

add_subdirectory (simplifiedMultiPhaseHT)
