# Pseudopotential solver

add_subdirectory (multiPhasePP)
add_subdirectory (multiPhasePP_test)


# Pseudopotential solver with heat transfer

add_subdirectory (multiPhasePPHT)


# Pseudopotential solver with heat transfer
# Finite-difference scheme for energy equation

add_subdirectory (multiPhasePPHT_FD)


# Pseudopotential solver with heat transfer
# Predictor-corrector scheme for energy equation

add_subdirectory (simplifiedMultiPhaseHT)
